Exercise design reworked, added some new logic to MainScreenActivity's manageFragments()

--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -18,13 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:background="@android:color/transparent"
-            app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/exercise_name" />
 
         <EditText
             android:id="@+id/exercise_name"
@@ -32,10 +31,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:ems="10"
+            android:hint="Exercise name"
             android:inputType="text"
-            android:text="@={viewModel.exerciseName}"
             android:maxLength="15"
+            android:text="@={viewModel.exerciseName}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
+            android:textColorHint="@color/DayNightColor"
             android:textSize="18sp"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,12 +48,15 @@
             android:id="@+id/exercise_comments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="24dp"
             android:ems="10"
+            android:hint="Comments"
             android:inputType="textMultiLine"
+            android:maxLength="50"
             android:text="@={viewModel.exerciseComments}"
-            android:maxLength="100"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
+            android:textColorHint="@color/DayNightColor"
             android:textSize="18sp"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintBottom_toTopOf="@+id/exercise_action_button"
@@ -76,132 +81,150 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_button"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="Set 1"
-            app:layout_constraintBottom_toTopOf="@+id/set_2"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
         <EditText
             android:id="@+id/set_1_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.firstSetReps}"
             android:maxLength="2"
+            android:text="@={viewModel.firstSetReps}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintBottom_toTopOf="@+id/set_2_reps"
-            app:layout_constraintEnd_toStartOf="@+id/set_1_weight"
-            app:layout_constraintStart_toEndOf="@+id/set_1" />
+            app:layout_constraintEnd_toStartOf="@+id/set_1"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
         <EditText
             android:id="@+id/set_1_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.firstSetWeight}"
             android:maxLength="3"
+            android:text="@={viewModel.firstSetWeight}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintBottom_toTopOf="@+id/set_2_weight"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/set_1"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
         <TextView
             android:id="@+id/set_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_button"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="Set 2"
-            app:layout_constraintBottom_toTopOf="@+id/set_3"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/set_1" />
 
         <EditText
             android:id="@+id/set_2_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.secondSetReps}"
             android:maxLength="2"
+            android:text="@={viewModel.secondSetReps}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintBottom_toTopOf="@+id/set_3_reps"
-            app:layout_constraintEnd_toStartOf="@+id/set_2_weight"
-            app:layout_constraintStart_toEndOf="@+id/set_2" />
+            app:layout_constraintEnd_toStartOf="@+id/set_2"
+            app:layout_constraintTop_toBottomOf="@+id/set_1_reps" />
 
         <EditText
             android:id="@+id/set_2_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.secondSetWeight}"
             android:maxLength="3"
+            android:text="@={viewModel.secondSetWeight}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintBottom_toTopOf="@+id/set_3_weight"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/set_2"
+            app:layout_constraintTop_toBottomOf="@+id/set_1_weight" />
 
         <TextView
             android:id="@+id/set_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_button"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="Set 3"
-            app:layout_constraintBottom_toTopOf="@+id/view"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/set_2" />
 
         <EditText
             android:id="@+id/set_3_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.thirdSetReps}"
             android:maxLength="2"
+            android:text="@={viewModel.thirdSetReps}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintBottom_toTopOf="@+id/view"
-            app:layout_constraintEnd_toStartOf="@+id/set_3_weight"
-            app:layout_constraintStart_toEndOf="@+id/set_3" />
+            app:layout_constraintEnd_toStartOf="@+id/set_3"
+            app:layout_constraintTop_toBottomOf="@+id/set_2_reps" />
 
         <EditText
             android:id="@+id/set_3_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.thirdSetWeight}"
             android:maxLength="3"
+            android:text="@={viewModel.thirdSetWeight}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintBottom_toTopOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/set_3"
+            app:layout_constraintTop_toBottomOf="@+id/set_2_weight" />
 
         <TextView
             android:id="@+id/set_4"
@@ -209,43 +232,49 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_button"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="Set 4"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintTop_toBottomOf="@+id/set_3" />
 
         <EditText
             android:id="@+id/set_4_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.fourthSetReps}"
             android:maxLength="2"
+            android:text="@={viewModel.fourthSetReps}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintEnd_toStartOf="@+id/set_4_weight"
-            app:layout_constraintStart_toEndOf="@+id/set_4"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintEnd_toStartOf="@+id/set_4"
+            app:layout_constraintTop_toBottomOf="@+id/set_3_reps" />
 
         <EditText
             android:id="@+id/set_4_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.fourthSetWeight}"
             android:maxLength="3"
+            android:text="@={viewModel.fourthSetWeight}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintStart_toEndOf="@+id/set_4"
+            app:layout_constraintTop_toBottomOf="@+id/set_3_weight" />
 
         <TextView
             android:id="@+id/set_5"
@@ -253,7 +282,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_button"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="Set 5"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/set_4" />
 
@@ -261,57 +296,61 @@
             android:id="@+id/set_5_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.fifthSetReps}"
             android:maxLength="2"
+            android:text="@={viewModel.fifthSetReps}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintEnd_toStartOf="@+id/set_5_weight"
-            app:layout_constraintStart_toEndOf="@+id/set_5"
+            app:layout_constraintEnd_toStartOf="@+id/set_5"
             app:layout_constraintTop_toBottomOf="@+id/set_4_reps" />
 
         <EditText
             android:id="@+id/set_5_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={viewModel.fifthSetWeight}"
             android:maxLength="3"
+            android:text="@={viewModel.fifthSetWeight}"
+            android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/set_5"
             app:layout_constraintTop_toBottomOf="@+id/set_4_weight" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rounded_button"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:text="reps"
-            app:layout_constraintBottom_toTopOf="@+id/set_1_reps"
-            app:layout_constraintEnd_toStartOf="@+id/set_1_weight"
-            app:layout_constraintStart_toEndOf="@+id/set_1" />
+            app:layout_constraintEnd_toStartOf="@+id/set_1_reps"
+            app:layout_constraintTop_toTopOf="@+id/set_1_reps" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_button"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="weight"
-            app:layout_constraintBottom_toTopOf="@+id/set_1_weight"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/set_1_weight"
+            app:layout_constraintTop_toTopOf="@+id/set_1_weight" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
