Exercise weight is double now + icon changed again

--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -116,8 +116,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:ems="10"
-            android:inputType="number"
-            android:maxLength="3"
+            android:inputType="numberDecimal"
+            android:maxLength="6"
             android:text="@={viewModel.firstSetWeight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
@@ -166,8 +166,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="number"
-            android:maxLength="3"
+            android:inputType="numberDecimal"
+            android:maxLength="6"
             android:text="@={viewModel.secondSetWeight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
@@ -216,8 +216,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="number"
-            android:maxLength="3"
+            android:inputType="numberDecimal"
+            android:maxLength="6"
             android:text="@={viewModel.thirdSetWeight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
@@ -266,8 +266,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="number"
-            android:maxLength="3"
+            android:inputType="numberDecimal"
+            android:maxLength="6"
             android:text="@={viewModel.fourthSetWeight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
@@ -316,8 +316,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="number"
-            android:maxLength="3"
+            android:inputType="numberDecimal"
+            android:maxLength="6"
             android:text="@={viewModel.fifthSetWeight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
