Adds multiple dates for training Main functionality is done, but edits are still required for UI

--- a/app/src/main/res/layout/date_item_card.xml
+++ b/app/src/main/res/layout/date_item_card.xml
@@ -40,7 +40,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:maxLength="15"
-                    android:text="@{viewModel.dateName}"
+                    android:text="@{viewModel.date}"
                     android:textColor="@color/textColor"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
