--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:ems="10"
-            android:hint="Exercise name"
+            android:hint="@string/exercise_hint_text"
             android:inputType="text"
             android:maxLength="15"
             android:text="@={viewModel.exerciseName}"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:ems="10"
-            android:hint="Comments"
+            android:hint="@string/comments_hint_text"
             android:inputType="textMultiLine"
             android:maxLength="50"
             android:text="@={viewModel.exerciseComments}"
@@ -86,7 +86,7 @@
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="Set 1"
+            android:text="@string/set_1"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +136,7 @@
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="Set 2"
+            android:text="@string/set_2"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +186,7 @@
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="Set 3"
+            android:text="@string/set_3"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -236,7 +236,7 @@
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="Set 4"
+            android:text="@string/set_4"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -286,7 +286,7 @@
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="Set 5"
+            android:text="@string/set_5"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -335,7 +335,7 @@
             android:background="@drawable/rounded_button"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:text="reps"
+            android:text="@string/repetitions"
             app:layout_constraintEnd_toStartOf="@+id/set_1_reps"
             app:layout_constraintTop_toTopOf="@+id/set_1_reps" />
 
@@ -348,7 +348,7 @@
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="weight"
+            android:text="@string/weight"
             app:layout_constraintStart_toEndOf="@+id/set_1_weight"
             app:layout_constraintTop_toTopOf="@+id/set_1_weight" />
 
