--- a/app/src/main/res/layout/running_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/running_creation_fragment_layout.xml
@@ -79,7 +79,7 @@
             android:id="@+id/running_distance_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Running distance, km"
+            android:text="@string/running_distance"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="@+id/running_distance"
             app:layout_constraintStart_toStartOf="@+id/running_distance"
@@ -111,7 +111,7 @@
             android:id="@+id/running_speed_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Speed, km/h"
+            android:text="@string/speed"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="@+id/running_speed_bottom_line"
             app:layout_constraintStart_toStartOf="@+id/running_speed_bottom_line"
@@ -170,7 +170,7 @@
             android:id="@+id/running_calories_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Calories lost"
+            android:text="@string/calories_lost"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="@+id/running_calories_bottom_line"
             app:layout_constraintStart_toStartOf="@+id/running_calories_bottom_line"
