--- a/app/src/main/res/layout/running_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/running_creation_fragment_layout.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:textColor="@android:color/black"
-            android:text="@{viewModel.actionString}"
+            android:text="@string/save"
             android:backgroundTint="@color/DayNightColor"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -138,7 +138,7 @@
             android:id="@+id/running_time_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Running time, minutes"
+            android:text="@string/running_time"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="@+id/running_time"
             app:layout_constraintStart_toStartOf="@+id/running_time"
